--- a/Lunchly/app/src/main/AndroidManifest.xml
+++ b/Lunchly/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
             </intent-filter>
         </activity>
 
+        <activity android:label="@string/app_name" android:name=".FeedActivity"/>
         <activity android:label="@string/app_name" android:name=".PickupActivity"/>
         <activity android:label="@string/app_name" android:name=".DropoffActivity"/>
         <activity android:label="@string/app_name" android:name=".TimeSelectActivity"/>
