--- a/Lunchly/app/src/main/AndroidManifest.xml
+++ b/Lunchly/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         </activity>
 
         <activity android:label="@string/app_name" android:name=".FeedActivity"/>
+        <activity android:label="@string/app_name" android:name=".ProfileActivity"/>
         <activity android:label="@string/app_name" android:name=".PickupActivity"/>
         <activity android:label="@string/app_name" android:name=".DropoffActivity"/>
         <activity android:label="@string/app_name" android:name=".TimeSelectActivity"/>
