Facebook profile images

--- a/Lunchly/app/src/main/AndroidManifest.xml
+++ b/Lunchly/app/src/main/AndroidManifest.xml
@@ -14,7 +14,6 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -28,7 +27,18 @@
         <activity android:label="@string/app_name" android:name=".OrdersActivity"/>
         <activity android:label="@string/app_name" android:name=".OrderDisplayActivity"/>
 
+        <activity android:label="@string/app_name" android:name="com.facebook.FacebookActivity"
+            android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+
+        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
+
+        <provider android:authorities="com.facebook.app.FacebookContentProvider469373463222756"
+            android:name="com.facebook.FacebookContentProvider"
+            android:exported="true" />
 
     </application>
+
+    <uses-permission android:name="android.permission.INTERNET"/>
 
 </manifest>
